--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
        <a id="ic" href="./index.html" class="bi bi-arrow-up-circle-fill"><p>HOME</p></a> 
 
     </header >
-    
+      <div class="space"></div>
         <div class="main" id="home">
          <div></div>
          <div></div>
@@ -31,18 +31,18 @@
             <h3>I'm  <span id='col'> God'swill</span> a Frontend developer.</h3>
             <p>I'm Based At Lagos State Nigeria.</p>
             <div></div>
-            <a>Hire Me</a>
+            <!-- <a href="contact">Hire Me</a> -->
        </div>
 
       <div id="about">
         <h1>About Me.</h1>
-        <div id="about-me"><h3>AGE :</h3><p>17 Years.</p></div>
-        <div id="about-me"><h3>nationality :</h3><p>nigerian</p></div>
-        <div id="about-me"><h3>state of origin :</h3><p>Abia.</p></div>
-        <div id="about-me"><h3>state of residence :</h3><p>Lagos state.</p></div>
-        <div id="about-me"><h3>work experience :</h3><p>None Currently.</p></div>
-        <div id="about-me"><h3>school certificate :</h3><p>Secondary School Leaver.</p></div>
-        <div id="about-me"><h3>technologies i'm versatile with :</h3> <p>HTML, CSS, JAVASCRIPT, REACT.JS.</p></div>
+        <div id="about-me"><h3>AGE:</h3><p>17 Years.</p></div>
+        <div id="about-me"><h3>nationality:</h3><p>nigerian</p></div>
+        <div id="about-me"><h3>state of origin:</h3><p>Abia.</p></div>
+        <div id="about-me"><h3>state of residence:</h3><p>Lagos state.</p></div>
+        <div id="about-me"><h3>work experience:</h3><p>None Currently.</p></div>
+        <div id="about-me"><h3>school certificate:</h3><p>Secondary School Leaver.</p></div>
+        <div id="about-me"><h3>technologies i'm versatile with:</h3> <p>HTML, CSS, JAVASCRIPT, REACT.JS.</p></div>
         <p>
             I don’t like to define myself by the work I’ve done.
              I define myself by the work I want to do. Skills can be taught, personality is inherent. 
@@ -82,7 +82,7 @@
       </div>
 
       <div id="contact">
-          <h2>CONTACT ME.</h2>
+          <h2 id="port">CONTACT ME.</h2>
           <div id="conxab">
           <p>
             I'm seeking out opportunities to collaborate with companies / agencies / individuals, not just work for them. I want to bring my collective design experience to the table where we can work together to solve real business-problems in a way that optimizes all of our respective experience and knowledge.
@@ -91,6 +91,7 @@
             I want to avoid subjective pissing-matches, and favor open-minded collaborators where egos are out of the equation. 
             If that all sounds about right, then lets for sure chat about how we can work together.
           </p>
+          <p>Reach out to me on...</p>
           </div>
           <a target="_blank" href="https://www.instagram.com/ezeala_godswill/?hl=en"><i class="bi bi-instagram"></i>INSTAGRAM</a>
           <a target="_blank" href="https://www.linkedin.com/in/godswill-ezeala-30a785253?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3B7vPn%2Fl24RDCG%2BhgrfNr5Gw%3D%3D"><i class="bi bi-linkedin" ></i>LINKEDIN</a>
