--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
          <div></div>
             <h1 id="wel">Hi There!</h1>
             <h3>I'm  <span id='col'> God'swill</span> a Frontend developer.</h3>
-            <p>I'm Based At Lagos State Nigeria.</p>
+            <p> Based At Lagos State Nigeria.</p>
             <div></div>
             <!-- <a href="contact">Hire Me</a> -->
        </div>
