--- a/index.html
+++ b/index.html
@@ -37,12 +37,12 @@
       <div id="about">
         <h1>About Me.</h1>
         <div id="about-me"><h3>AGE:</h3><p>17 Years.</p></div>
-        <div id="about-me"><h3>nationality:</h3><p>nigerian</p></div>
+        <div id="about-me"><h3>nationality:</h3><p>Nigerian.</p></div>
         <div id="about-me"><h3>state of origin:</h3><p>Abia.</p></div>
-        <div id="about-me"><h3>state of residence:</h3><p>Lagos state.</p></div>
+        <div id="about-me"><h3>state of residence:</h3><p>Lagos State.</p></div>
         <div id="about-me"><h3>work experience:</h3><p>None Currently.</p></div>
         <div id="about-me"><h3>school certificate:</h3><p>Secondary School Leaver.</p></div>
-        <div id="about-me"><h3>technologies i'm versatile with:</h3> <p>HTML, CSS, JAVASCRIPT, REACT.JS.</p></div>
+        <div id="about-me"><h3>technologies i'm versatile with:</h3> <p>HTML, CSS, JAVASCRIPT, REACT.JS .</p></div>
         <p>
             I don’t like to define myself by the work I’ve done.
              I define myself by the work I want to do. Skills can be taught, personality is inherent. 
@@ -93,11 +93,11 @@
           </p>
           <p>Reach out to me on...</p>
           </div>
-          <a target="_blank" href="https://www.instagram.com/ezeala_godswill/?hl=en"><i class="bi bi-instagram"></i>INSTAGRAM</a>
-          <a target="_blank" href="https://www.linkedin.com/in/godswill-ezeala-30a785253?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3B7vPn%2Fl24RDCG%2BhgrfNr5Gw%3D%3D"><i class="bi bi-linkedin" ></i>LINKEDIN</a>
-          <a  href="https://twitter.com/EzealaGodswill" rel="Twitter link" target="_blank"><i class="bi bi-twitter"></i>TWITTER</a>
-          <a href="https://github.com/akarasauce" target="_blank"><i class="bi bi-github"></i>GITHUB</a>
-          <a target="_blank" href="mailto:ezealagodswill@gmail.com"><i class="bi bi-envelope"></i>EMAIL</a>
+          <a target="_blank" href="https://www.instagram.com/ezeala_godswill/?hl=en"><i class="bi bi-instagram"></i> INSTAGRAM</a>
+          <a target="_blank" href="https://www.linkedin.com/in/godswill-ezeala-30a785253?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3B7vPn%2Fl24RDCG%2BhgrfNr5Gw%3D%3D"><i class="bi bi-linkedin" ></i> LINKEDIN</a>
+          <a  href="https://twitter.com/EzealaGodswill" rel="Twitter link" target="_blank"><i class="bi bi-twitter"></i> TWITTER</a>
+          <a href="https://github.com/akarasauce" target="_blank"><i class="bi bi-github"></i> GITHUB</a>
+          <a target="_blank" href="mailto:ezealagodswill@gmail.com"><i class="bi bi-envelope"></i> EMAIL</a>
     
       </div>
       <footer>Ezeala Godswill </footer>
